# qt_3dviewer

./: Makefile  README.md  ui.cfg
common/: s21_parser.c  s21_parser.cpp  s21_parser.h  s21_parser.hpp  s21_struct.h  s21_transform.c  s21_transform.h
opengl_cmake/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h  myopenglwidget.hpp
test_files/: test_main.c  test_main.cpp  test_main.h  test_main.hpp  test_parser.c  test_transform.c
